--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,12 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="button">Button</string>
     <string name="login">Login</string>
+    <string name="send">Send</string>
+    <string name="save">Save</string>
     <string name="welcome">Welcome!</string>
     <string name="login_description">Log in to continue your journey towards a smoke-free life</string>
     <string name="forgot_password">Forgot Password?</string>
+    <string name="new_password">Create New Password</string>
     <string name="or">or</string>
     <string name="sign_in_with_google">Sign In With Google</string>
     <string name="no_acc">Don\'t have an account yet?</string>
@@ -24,4 +27,7 @@
     <string name="login_here">Login Here!</string>
     <string name="invalid_email">Enter your email accordingly</string>
     <string name="password_alert">Password must not be less than 8 characters</string>
+
+    <string name="forgot_password_instruction">Enter the email associated with your account and we will send an email with instructions to reset password</string>
+    <string name="new_password_description">Your new password must be different from previous used password</string>
 </resources>
