feat: adding animation in edit text new and forgot password and back navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
 
     <string name="forgot_password_instruction">Enter the email associated with your account and we will send an email with instructions to reset password</string>
     <string name="new_password_description">Your new password must be different from previous used password</string>
+    <string name="back">Back</string>
 </resources>
