Modified fragment_personalized_four.xml and added card_border.xml in drawable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,13 @@
     <string name="title_plan">Plan</string>
     <string name="title_rank">Rank</string>
     <string name="title_profile">Profile</string>
+
+    <string name="plan_detail_title">Plan</string>
+    <string name="plan_duration">Duration</string>
+    <string name="plan_percentage">87%</string>
+    <string name="plan_detail_progress">Detail Progress</string>
+
+    <string name="plan_week">Week</string>
+    <string name="plan_description">Descriptions</string>
+
 </resources>
