Modified fragment_home.xml and fragment_personalized_four.xml, adding some asset and styles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
 
     <string name="plan_week">Week</string>
     <string name="plan_description">Descriptions</string>
+    <string name="title_challenges">Challenges</string>
 
 </resources>
