--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
     <string name="preferences_guide">Guide</string>
     <string name="preferences_info">About Us</string>
     <string name="preferences_help">Help Center</string>
+    <string name="shop_title">Shop</string>
     <string name="logout">Logout</string>
 
 
