--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,6 +86,9 @@
     <string name="what_time_do_you_wake_up">what time do you wake up?</string>
     <string name="select_a_time_approximately">select a time approximately</string>
     <string name="what_time_did_you_smoke_your_first_cigarette_after_waking_up">What time did you smoke, your first cigarette after waking up?</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+    <string name="app_widget_description">This is an app widget description</string>
 
 
 </resources>
