feat: update failed network widget

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,7 @@
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
     <string name="app_widget_description">This is an app widget description</string>
+    <string name="how_many_cigarettes_do_you_consume_per_day">how many cigarettes do you consume per day?</string>
 
 
 </resources>
