--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,5 +99,6 @@
     <string name="question_challenges">What challenges are you facing in resisting the urge to smoke today?</string>
     <string name="question_commitment">Write down your commitment to quit smoking for tomorrow!</string>
     <string name="journaling_summary">Summary of your daily journal today</string>
+    <string name="helper_edt">Write your answer here...</string>
     
 </resources>
