--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,4 +110,6 @@
 
     <string name="smoke_consumed">Cigarettes consumed</string>
     <string name="smoke_limit">Cigarettes limit</string>
+    <string name="journaling_description">You will get an extra +40XP if you fill out this journal</string>
+    <string name="journaling_title">Let\'s fill in your daily journal!</string>
 </resources>
