--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,8 +51,8 @@
     <string name="challenge_desc">Complete the following challenges to earn XP and daily streaks!</string>
     <string name="challenge_smoke">Limit daily cigarettes</string>
     <string name="challenge_breath">Breathing Exercise</string>
-    <string name="milestone_title">Milestone Progress</string>
-    <string name="milestone_desc">Reach milestones to achieve your goals</string>
+    <string name="milestone_title">Badges Colletions</string>
+    <string name="milestone_desc">The badges represent the milestone you have achieved. Keep collecting them to reach your ultimate goals!</string>
     <string name="rank_title">Rank</string>
     <string name="xp_title">XP</string>
     <string name="rank_description">Compete with people who have the same goals as you. Break a leg!</string>
