feat: update fragment plan

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,4 +145,5 @@
 
     <string name="did_you_know">Did you know?</string>
     <string name="medical_news_description">Medical News Today explains that the average person can hold their breath for about 30–90 seconds.</string>
+    <string name="title_milestone">Milestone</string>
 </resources>
